[package]
name = "edt"
version = "0.2.0"
authors = ["msakuta <masahiro.sakuta@gmail.com>"]
edition = "2018"
description = "An implementation of 2D EDT (Euclidian distance transform) with Saito's algorithm in pure Rust"
license = "MIT"
repository = "https://github.com/msakuta/rust-edt"

[dependencies]

[dev-dependencies]
image = "0.24.0"
clap = { version = "3.1.0", features = ["derive"] }
